--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
-<body>
-    <button onclick="loadData()">Load Data</button>
-    <button onclick="loadData2()">Load Data 2</button>
-    <button onclick="loadUsers()">Load Users</button>
-    <button onclick="loadUsers2()">load Users 2</button>
+<body class="m-3">
+    <button class="border-0 btn btn-primary" onclick="loadData()">Load Data</button>
+    <button class="border-0 btn btn-secondary" onclick="loadData2()">Load Data 2</button>
+    <button class="border-0 btn btn-warning" onclick="loadUsers()">Load Users</button>
+    <button class="border-0 btn btn-success" onclick="loadUsers2()">load Users 2</button>
 
-    <div class="list-container">
+    <div class="list-container d-flex g-3">
         <ul id="list-item">
             
+        </ul>
+        <ul id="list-item2">
+
         </ul>
     </div>
 
@@ -23,5 +27,7 @@
     <script src="js/fetch.js"></script>
     <script src="js/app.js"></script>
     <script src="js/index.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
